# esm-logging

./: .gitignore  .npmignore  CONTRIBUTING.md  Makefile  README.md  TODO  bitbucket-pipelines.yml  configure  configure.ac  jest.config.js  jest.config.mjs  package-lock.json  package.json  tsconfig.debug.json  tsconfig.json
doc/: README.md
docs/: logging-cookbook.md
scripts/: npm-pack.ts  pack.ts
src/: .logging.ts.swo  config.ts  error.ts  filter.ts  formatter.ts  handler.ts  index.ts  log-level.ts  log-record.ts  logger.ts  manager.ts
src/helper/: error.ts  stream.ts
src/logging/: index.ts  logger.ts
src/polyfill/: regexp.ts
src/types/: regexp.d.ts
src/util/: regexp.ts  string.ts
tests/: log-level.test.ts  logging.test.ts  test.ts
